# YarnBall-Linux

./: .gitignore  CMakeLists.txt  LINUX_MIGRATION_PLAN.md  README_LINUX.md
.agent/: .gitignore  ABOUT.md  DECISIONS.md  HOWTO.md  NOTES.md  README.md
.agent/log/: 2026-05-08.md  2026-05-29.md
KittenEngine/KittenEngine/includes/modules/: Algo.h  ComputeBuffer.h  SymMat.h
KittenEngine/KittenEngine/src/: Font.cpp  Gizmos.cpp  KittenAssets.cpp  KittenInit.cpp  KittenPreprocessor.cpp  KittenRendering.cpp  Mesh.cpp  Shader.cpp  StopWatch.cpp  Timer.cpp
KittenEngine/YarnBall/: YarnBall.cu  YarnBall.h
KittenEngine/YarnBall/io/: render.cpp
KittenEngine/YarnBall/sim/: collision.cu  cosserat.cu  step.cpp
scripts/: install-linux-deps.sh
